@@ -4912,21 +4912,6 @@ function uninstall_dst_net_filter%(snet: subnet%) : bool
 	return val_mgr->GetBool(sessions->GetPacketFilter()->RemoveDst(snet));
 	%}
 
-## Writes the binary event stream generated by the core to a given file.
-## Use the ``-R <filename>`` command line switch to replay saved events.
-##
-## filename: The name of the file which stores the events.
-##
-## Returns: True if opening the target file succeeds.
-##
-## .. zeek:see:: capture_state_updates
-function capture_events%(filename: string%) : bool
-	%{
-	// Fixme: johanna
-
-	return val_mgr->GetBool(true);
-	%}
-
 ## Checks whether the last raised event came from a remote peer.
 ##
 ## Returns: True if the last raised event came from a remote peer.
